--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@
 
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="./images/Aptinnov 4 w.png" alt="Homepage" style="width: 200px; height: 50px;">
+                <img src="./images/Aptinnov 4 w.png" alt="Homepage" style="max-width: 250%; height: 100%;">
             </a>
+            
         </div>
 
         <nav class="header-nav">
@@ -847,9 +848,9 @@
             </div>
         </div>
 
-        <div style="overflow:hidden; padding-top:56.25%; position:relative;">
+        <div style="overflow:hidden; padding-top:25.25%; position:relative;">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3934.779859914258!2d76.82032367491551!3d9.52784589055476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0637c2e4cb6439%3A0xd7716af546178aef!2sStartups%20Valley%20TBI!5e0!3m2!1sen!2sin!4v1710314335856!5m2!1sen!2sin" 
-                width="100%" height="80%" style="border:0; position:absolute; top:0; left:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                width="100%" height="100%" style="border:0; position:absolute; top:0; left:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </div>
         
@@ -884,6 +885,8 @@
         <!-- </div> end footer-main -->
 
         <!-- <div class="row footer-bottom"> -->
+            <br>
+            <br>
         <div class="col-twelve">
             <div class="copyright">
                 <span>© Copyright @ <a href="index.html">Aptinnov </a> |</span>
