--- a/index.html
+++ b/index.html
@@ -106,9 +106,11 @@
     }
 
     .site-logo img {
-        max-width: 100%; /* Ensure the logo doesn't exceed its container */
-        height: auto; /* Maintain the aspect ratio */
-    }
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
 
     /* Mobile */
     @media (max-width: 576px) {
