--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <style>
         .section-container {
-            text-align: center;
+            /* text-align: center; */
             margin-bottom: 50px;
             margin-top: 50px;
         }
