--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                     <img src="./images/IMG_2736.jpeg" alt="Image">
                 </div>
             </div>
-            <div class="content-container">
+            <div class="content-container" style="margin:auto 20px">
                 <h2 class="section-heading" style="color: white; font-size: 25px;">Natural Rubber Collecting Knapsack</h2>
                 <p style="font-family: 'Caviar Dreams', sans-serif; font-size: 35px; font-weight: bold;">"Necessity is the mother of all Invention." <br>
                 <span style="font-size: 28px; font-weight: lighter;">Albert Einstein </span> </p>
@@ -691,12 +691,12 @@
             <div class="col-full">
                 <div class="clients">
 
-                    <a href="#0" title="" class="clients__slide"><img src="./images/DST.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="./images/KIIB TBI.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="./images/IFCI.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="./images/KSUM.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="./images/KAU.png" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="./images/RKVY.png" /></a>
+                    <a href="https://gyti.techpedia.in/award-winner/2016" target="_blank" title="" class="clients__slide"><img src="./images/DST.png" /></a>
+                    <a href="https://www.vcfsc.in/asiim/index.html" target="_blank" title="" class="clients__slide"><img src="./images/KIIB TBI.png" /></a>
+                    <a href="https://kiitincubator.in/nidhi-eir/" target="_blank" title="" class="clients__slide"><img src="./images/IFCI.png" /></a>
+                    <a href="https://drive.google.com/file/d/1N_IixaIwPbOIhQLVliIl21OSzTK8qa9u/view" target="_blank" title="" class="clients__slide"><img src="./images/KSUM.png" /></a>
+                    <a href="https://kau.in/news/16490" target="_blank" title="" class="clients__slide"><img src="./images/KAU.png" /></a>
+                    <a href="https://rkvy.nic.in" target="_blank" title="" class="clients__slide"><img src="./images/RKVY.png" /></a>
 
                 </div> <!-- end clients -->
             </div> <!-- end col-full -->
@@ -875,7 +875,7 @@
             </div>
         </div>
 
-        <div style="overflow:hidden; padding-top:25.25%; position:relative;">
+        <div style="overflow:auto; padding-top:50%; position:relative;">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3934.779859914258!2d76.82032367491551!3d9.52784589055476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0637c2e4cb6439%3A0xd7716af546178aef!2sStartups%20Valley%20TBI!5e0!3m2!1sen!2sin!4v1710314335856!5m2!1sen!2sin" 
                 width="100%" height="100%" style="border:0; position:absolute; top:0; left:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
