--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
             <div class="col-full">
                 <div class="clients">
 
-                    <a href="https://gyti.techpedia.in/award-winner/2016" target="_blank" title="" class="clients__slide"><img src="./images/DST.png" /></a>
+                    <a href="https://gyti.techpedia.in/project-detail/latex-natural-rubber-carry-backpack/7194" target="_blank" title="" class="clients__slide"><img src="./images/DST.png" /></a>
                     <a href="https://www.vcfsc.in/asiim/index.html" target="_blank" title="" class="clients__slide"><img src="./images/KIIB TBI.png" /></a>
                     <a href="https://kiitincubator.in/nidhi-eir/" target="_blank" title="" class="clients__slide"><img src="./images/IFCI.png" /></a>
                     <a href="https://drive.google.com/file/d/1N_IixaIwPbOIhQLVliIl21OSzTK8qa9u/view" target="_blank" title="" class="clients__slide"><img src="./images/KSUM.png" /></a>
