--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         </div>
         <div class="content-container" style="margin:auto 10px">
             <h2 class="section-heading" style="color: white; font-size: 25px;">Natural Rubber Collecting Knapsack</h2>
-            <p style="font-family: 'Caviar Dreams', sans-serif; font-size: 30px; ">"Necessity is the
+            <p style="font-family: 'Caviar Dreams', sans-serif; font-size: 34px; font-weight: bold;">"Necessity is the
                 mother of all Invention." <br>
                 <span style="font-size: 28px; font-weight: lighter;">Albert Einstein </span>
             </p>
