--- a/buynow.html
+++ b/buynow.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buy Now - Product Name</title>
+    <title>Buy Now - Natural Rubber Collecting Knapsack</title>
     <link rel="stylesheet" href="buynow.css">
 </head>
 <body>
     <div class="container">
+        <!-- Hero Section -->
         <section class="hero">
-            <img src="./images/CEO.jpg" alt="Product Image" class="product-image">
-            <h1 class="product-name">Product Name</h1>
+            <img src="./images/portfolio/guitarist1.jpg" alt="Product Image" class="product-image">
+            <h1 class="product-name">Natural Rubber Collecting Knapsack</h1>
             <p class="tagline">The ultimate solution for your needs</p>
         </section>
+        <!-- Product Details -->
         <section class="product-details">
             <div class="description">
                 <h2>Description</h2>
@@ -21,16 +23,24 @@
             <div class="specifications">
                 <h2>Specifications</h2>
                 <ul>
-                    <li>Feature 1</li>
-                    <li>Feature 2</li>
-                    <li>Feature 3</li>
+                    <li><img src="checkmark.png" alt="Check"> Feature 1</li>
+                    <li><img src="checkmark.png" alt="Check"> Feature 2</li>
+                    <li><img src="checkmark.png" alt="Check"> Feature 3</li>
                 </ul>
             </div>
         </section>
+        <!-- Call to Action -->
         <section class="cta">
             <span class="price">$99.99</span>
             <button class="buy-now-btn">Buy Now</button>
+            <a href="index.html" class="back-home-btn">Back to Home</a>
+            <div class="trust-badges">
+                <img src="secure-checkout.png" alt="Secure Checkout">
+                <img src="verified-seller.png" alt="Verified Seller">
+                <img src="money-back.png" alt="Money Back Guarantee">
+            </div>
         </section>
+        <!-- Contact Information -->
         <section class="contact-info">
             <h2>Contact Information / FAQs</h2>
             <p>For any inquiries, please contact us at <a href="mailto:support@example.com">support@example.com</a>.</p>
