--- a/index.html
+++ b/index.html
@@ -877,73 +877,34 @@
     </section> <!-- end s-contact -->
 
 
-    <!-- footer
-    ================================================== -->
-    <footer>
-
-        <!-- <div class="row footer-main"> -->
-        <div class="row section-header" data-aos="fade-up">
-            <div class="col-full">
-                <h3 class="subhead">Location</h3>
-                <!-- <h1 class="display-2 display-2--light">Reach out for a new project or just say hello</h1> -->
-            </div>
+<!-- footer ================================================== -->
+<footer>
+    <div class="row section-header" data-aos="fade-up">
+        <div class="col-full">
+            <h3 class="subhead">Location</h3>
         </div>
-        <br>
-        <br>
-        <div style="overflow:auto; padding-top:50%; position:relative;">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3934.779859914258!2d76.82032367491551!3d9.52784589055476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0637c2e4cb6439%3A0xd7716af546178aef!2sStartups%20Valley%20TBI!5e0!3m2!1sen!2sin!4v1710314335856!5m2!1sen!2sin"
-                width="100%" height="80%" style="border:0; position:absolute; top:0; left:0;" allowfullscreen
-                loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-        </div>
-
-
-        <!-- <div class="col-six tab-full left footer-desc">
-
-                <div class="footer-logo"></div>
-                Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Praesent sapien
-                massa, convallis a pellentesque nec, egestas non nisi. Mauris blandit aliquet elit, eget tincidunt nibh
-                pulvinar a. Nulla porttitor accumsan tincidunt. Nulla porttitor accumsan tincidunt. Quaerat voluptas
-                autem necessitatibus vitae aut.
-
-            </div>
-
-            <div class="col-six tab-full right footer-subscribe">
-
-                <h4>Get Notified</h4>
-                <p>Quia quo qui sed odit. Quaerat voluptas autem necessitatibus vitae aut non alias sed quia. Ut itaque
-                    enim optio ut excepturi deserunt iusto porro.</p>
-
-                <div class="subscribe-form">
-                    <form id="mc-form" class="group" novalidate="true">
-                        <input type="email" value="" name="EMAIL" class="email" id="mc-email"
-                            placeholder="Email Address" required="">
-                        <input type="submit" name="subscribe" value="Subscribe">
-                        <label for="mc-email" class="subscribe-message"></label>
-                    </form>
-                </div>
-
-            </div> -->
-
-        <!-- </div> end footer-main -->
-
-        <!-- <div class="row footer-bottom"> -->
+    </div>
+    <br><br>
+    <div class="map-container">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3934.779859914258!2d76.82032367491551!3d9.52784589055476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0637c2e4cb6439%3A0xd7716af546178aef!2sStartups%20Valley%20TBI!5e0!3m2!1sen!2sin!4v1710314335856!5m2!1sen!2sin"
+            width="100%" height="100%" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+    </div>
+    <div class="row footer-bottom">
         <div class="col-twelve">
             <div class="copyright">
-                <span>© Copyright @ <a href="index.html">Aptinnov </a> |</span>
+                <span>© Copyright @ <a href="index.html">Aptinnov</a> |</span>
                 <span>Developed by <a href="https://www.agrowtein.com/">Agrowtein</a></span>
             </div>
-
             <div class="go-top">
-                <a class="smoothscroll" title="Back to Top" href="#top"><i class="icon-arrow-up"
-                        aria-hidden="true"></i></a>
+                <a class="smoothscroll" title="Back to Top" href="#top"><i class="icon-arrow-up" aria-hidden="true"></i></a>
             </div>
         </div>
+    </div> <!-- end footer-bottom -->
+</footer> <!-- end footer -->
 
-        <!-- </div> end footer-bottom -->
 
-    </footer> <!-- end footer -->
 
 
     <!-- photoswipe background
