Buy Now Page Edited

--- a/buynow.html
+++ b/buynow.html
@@ -1,50 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buy Now - Natural Rubber Collecting Knapsack</title>
+     <!--- basic page needs
+    ================================================== -->
+    <meta charset="utf-8">
+    <title>APTINNOV</title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- mobile specific metas
+    ================================================== -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="buynow.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- favicons
+    ================================================== -->
+    <link rel="shortcut icon" href="./images/Aptinnov 2.png" type="image/x-icon">
+    <link rel="icon" href="./images/Aptinnov 2.png" type="image/x-icon">
 </head>
 <body>
-    <div class="container">
-        <!-- Hero Section -->
-        <section class="hero">
-            <img src="./images/portfolio/guitarist1.jpg" alt="Product Image" class="product-image">
-            <h1 class="product-name">Natural Rubber Collecting Knapsack</h1>
-            <p class="tagline">The ultimate solution for your needs</p>
-        </section>
-        <!-- Product Details -->
+    <header>
+        <div class="logo">
+            <a href="index.html"><img src="./images/Aptinnov 4 w.png" alt="APTInnov" class="logo-image"></a>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
         <section class="product-details">
-            <div class="description">
-                <h2>Description</h2>
-                <p>A concise yet compelling description of the product, focusing on key features and benefits.</p>
-            </div>
-            <div class="specifications">
-                <h2>Specifications</h2>
-                <ul>
-                    <li><img src="checkmark.png" alt="Check"> Feature 1</li>
-                    <li><img src="checkmark.png" alt="Check"> Feature 2</li>
-                    <li><img src="checkmark.png" alt="Check"> Feature 3</li>
+            <img src="./images/portfolio/gallery/g-guitarist1.jpg" alt="Product Image" class="product-image">
+            <div class="product-info">
+                <h1>Natural Rubber Collecting Knapsack</h1>
+                <p class="price"> <strong>₹ 1699/-</strong></p>
+                <p class="product-description">
+                    Introducing our <strong>Natural Rubber Collecting Knapsack</strong> – a durable and efficient solution for rubber tappers. This knapsack is designed to make the collection of natural rubber easier and more convenient.
+                </p>
+                <ul class="product-features">
+                    <li><strong>Durable Material:</strong> Made from high-quality materials to withstand tough working conditions.</li>
+                    <li><strong>Ergonomic Design:</strong> Comfortable straps and lightweight construction for easy carrying over long periods.</li>
+                    <li><strong>16-Litre Capacity:</strong> Ample space to collect and store large quantities of natural rubber.</li>
+                    <li><strong>Easy to Clean:</strong> Simple to wash and maintain, ensuring hygiene and longevity.</li>
                 </ul>
+                <!-- <p class="product-description">
+                    This 16-litre capacity knapsack is the perfect companion for rubber tappers, enhancing productivity and reducing physical strain. Ideal for both professional and small-scale rubber tappers.
+                </p> -->
+                <div class="purchase-options">
+                    <a href="https://forms.gle/ikCSbCnacN5SN76H9" class="buy-now">Buy Now</a>
+                </div>
             </div>
         </section>
-        <!-- Call to Action -->
-        <section class="cta">
-            <span class="price">$99.99</span>
-            <button class="buy-now-btn">Buy Now</button>
-            <a href="index.html" class="back-home-btn">Back to Home</a>
-            <div class="trust-badges">
-                <img src="secure-checkout.png" alt="Secure Checkout">
-                <img src="verified-seller.png" alt="Verified Seller">
-                <img src="money-back.png" alt="Money Back Guarantee">
+    </main>
+    <footer>
+        <h3 class="footer-title">Contact Info</h3>
+        <div class="footer-container">
+            <div class="cinfo">
+                <h5>Aptinnov Labs Private Limited</h5>
+                <h5 class="cin">CIN: U52520KL2019PTC058796</h5>
+                <p>Email Us At: <span>aptinnovlabs@gmail.com</span></p>
+                <p>Call Us At: <span>+91 860 611 7823</span> | <span>+91 773 602 2823</span></p>
             </div>
-        </section>
-        <!-- Contact Information -->
-        <section class="contact-info">
-            <h2>Contact Information / FAQs</h2>
-            <p>For any inquiries, please contact us at <a href="mailto:support@example.com">support@example.com</a>.</p>
-        </section>
-    </div>
+        </div>
+        <div class="footer-social">
+            <p>Follow us on social media:</p>
+            <div class="social-media">
+                <a href="https://www.instagram.com/aptinnov?igshid=MTMzMDlqYnp1eDg3YQ"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+                <span>|</span>
+                <a href="https://www.linkedin.com/company/aptinnov-labs/"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                <span>|</span>
+                <a href="https://www.facebook.com/Aptinnov?mibextid=LQQJ4d"><i class="fab fa-facebook" aria-hidden="true"></i></a>
+                <span>|</span>
+                <a href="https://x.com/aptinnov?s=21&t=uiE6RdKG0FUV2KIgZhyT8w"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+                <span>|</span>
+                <a href="https://youtube.com/@aptinnov1619?si=2aVDQ_t-hZgx9_cQ"><i class="fab fa-youtube" aria-hidden="true"></i></a>
+            </div>
+        </div>
+    </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
